--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
                     <p><a class="header-contacts__txt" href="tel:977 369 5492">977 369 5492</a></p>
                 </div>
 
-                <div class="contact-form-trigger">
-                    <button class="link-primary btn-cf js-popup-cf-opener" data-form="contact-form" type="button">
-                        Contact Us
-                    </button>
-                </div>
+<!--                <div class="contact-form-trigger">-->
+<!--                    <button class="link-primary btn-cf js-popup-cf-opener" type="button">-->
+<!--                        Contact Us-->
+<!--                    </button>-->
+<!--                </div>-->
             </div>
         </div>
     </div>
@@ -722,6 +722,29 @@
 <!--    </section>-->
 </main>
 
+<footer>
+    <div class="left">
+        <h3 class="section-title">Event Location</h3>
+        <address>
+            <p>INSTITUTE OF MANAGEMENT STUDIES(UC CAMPUS)
+                <br> NH-24,ADHYATMIK NAGAR,GHAZIABAD<br>UTTAR PRADESH,201015<br> Phone:<br>+91 9773695492<br>+91 8587040078 <br> website: www.imsuc.ac.in</p>
+        </address>
+    </div>
+
+    <div class="right">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3500.3177439445035!2d77.50375981441893!3d28.680140282399048!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cf25b42f369ff%3A0xd22227c565aed275!2sIMSUC+Ghaziabad!5e0!3m2!1sen!2sin!4v1462794998228" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen ></iframe>
+    </div>
+</footer>
+
+<div class="col-md-12">
+    <p class="site-info">Copyright  &copy; 2017 | IMS Ghaziabad University Courses Campus | All Rights Reserved.<br> Designed by <a href="http://www.imsuc.ac.in">IMSMUNC Team</a></p>
+    <ul class="social-block">
+        <li><a href="">Twitter</a></li>
+        <li><a href="https://www.facebook.com/Imsmunc/">Facebook</a></li>
+        <li><a href="">Linkedin</a></li>
+        <li><a href="">Google+</a></li>
+    </ul>
+</div
 
 
 <script type='text/javascript'>
