--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
     </div>
 </footer>
 
-<div class="col-md-12">
+<div class="social-links">
     <p class="site-info">Copyright  &copy; 2017 | IMS Ghaziabad University Courses Campus | All Rights Reserved.<br> Designed by <a href="http://www.imsuc.ac.in">IMSMUNC Team</a></p>
     <ul class="social-block">
         <li><a href="">Twitter</a></li>
@@ -744,7 +744,7 @@
         <li><a href="">Linkedin</a></li>
         <li><a href="">Google+</a></li>
     </ul>
-</div
+</div>
 
 
 <script type='text/javascript'>
