--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 </footer>
 
 <div class="social-links">
-    <p class="site-info">Copyright  &copy; 2017 | IMS Ghaziabad University Courses Campus | All Rights Reserved.<br> Designed by <a href="http://www.imsuc.ac.in">IMSMUNC Team</a></p>
+    <p class="site-info">Copyright  &copy; 2017 | IMS Ghaziabad University Courses Campus | All Rights Reserved.<br> Designed by <a href="http://www.imsuc.ac.in">EWL Team</a></p>
     <ul class="social-block">
         <li><a href="">Twitter</a></li>
         <li><a href="https://www.facebook.com/Imsmunc/">Facebook</a></li>
