--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <div class="animation-hero__icon">
                     <!-- Circle & lines -->
                     <div class="hero-01-group visible-md visible-lg">
-                        <i class="hero-01__circle munc rt">IMSMUNC<br>2K19</i>
+                        <i class="hero-01__circle munc rt">IMSMUNC<br>2019</i>
 
                         <div class="hero-01__group-line--l">
                             <i class="hero-01__line-0"></i>
@@ -737,7 +737,7 @@
 </footer>
 
 <div class="social-links">
-    <p class="site-info">Copyright  &copy; 2017 | IMS Ghaziabad University Courses Campus | All Rights Reserved.<br> Designed by <a href="http://www.imsuc.ac.in">EWL Team</a></p>
+    <p class="site-info">Copyright  &copy; 2019 | IMS Ghaziabad University Courses Campus | All Rights Reserved.<br> Designed by <a href="http://www.imsuc.ac.in">EWL Team</a></p>
     <ul class="social-block">
         <li><a href="">Twitter</a></li>
         <li><a href="https://www.facebook.com/Imsmunc/">Facebook</a></li>
