--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
     <meta content="#151515" name="msapplication-TileColor">
     <meta content="#151515" name="theme-color">
 </head>
-<body class="is-loading">
+<body class="is-loaded main-animation-start">
 
-<div class="loader">
+<div class="loader is-load-end" style="display: none;">
     <div class="loader__line js-progress"></div>
 </div>
 
@@ -422,9 +422,7 @@
             <h2 class="works__ttl">Communities</h2>
 
             <div class="work-item">
-                ̥
-                <div class="work-item__content">̥
-
+                <div class="work-item__content">
                     <div class="work-item__txt-slide js-snap">
 
                         <h3 class="work-item__ttl" title="Dwellaby">UN General Assembly</h3>
