--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <meta content="#151515" name="msapplication-TileColor">
     <meta content="#151515" name="theme-color">
 </head>
-<body class="is-loaded main-animation-start" style="background-image: url('./images/grad.png')">
+<body class="is-loaded main-animation-start">
 
 <div class="loader is-load-end" style="display: none;">
     <div class="loader__line js-progress"></div>
@@ -682,6 +682,10 @@
         <li><a href=""><i class="fa fa-instagram"></i></a></li>
         <li><a href="https://www.facebook.com/Imsmunc/"><i class="fa fa-facebook-f"></i></a></li>
     </ul>
+    <li class="tg-list-item">
+        <input class="tgl tgl-flip" id="cb5" type="checkbox"/>
+        <label class="tgl-btn" data-tg-off="Pink!" data-tg-on="Blue!" for="cb5"></label>
+    </li>
 </div>
 
 
