--- a/index.html
+++ b/index.html
@@ -261,14 +261,14 @@
                                     <p>Resources</p><i style="margin-left: 10px;" class="fa fa-angle-down"></i>
                                     <ul class="dropDown" style="list-style: none">
                                         <li><a href="https://www.google.com/url?q=https://docs.google.com/spreadsheets/d/1Sj9J5nrnQiFipFPNOIDdlC42DZ9WL-J02a94AtYoJSQ/edit?usp%3Dsharing&sa=D&ust=1568282788189000&usg=AFQjCNH1qIyU6qzgO4TvzDfJBGM-R7Gg0w" target="_blank">Matrix</a></li>
-                                        <li><a href="">Background Guide - UNGA</a></li>
-                                        <li><a href="">Background Guide - UNSC</a></li>
-                                        <li><a href="">Background Guide - UNHRC</a></li>
-                                        <li><a href="">Background Guide - AIPPM</a></li>
-                                        <li><a href="">Background Guide - Supreme Court of India</a></li>
-                                        <li><a href="">Background Guide - Marvel vs DC</a></li>
-                                        <li><a href="">Background Guide - International Press</a></li>
-                                        <li><a href="">MUN Guidelines</a></li>
+                                        <li><a href="">Background Guide - UNGA</a><span class="soon">Uploading Soon</span></li>
+                                        <li><a href="">Background Guide - UNSC</a><span class="soon">Uploading Soon</span></li>
+                                        <li><a href="">Background Guide - UNHRC</a><span class="soon">Uploading Soon</span></li>
+                                        <li><a href="">Background Guide - AIPPM</a><span class="soon">Uploading Soon</span></li>
+                                        <li><a href="">Background Guide - Supreme Court of India</a><span class="soon">Uploading Soon</span></li>
+                                        <li><a href="">Background Guide - Marvel vs DC</a><span class="soon">Uploading Soon</span></li>
+                                        <li><a href="">Background Guide - International Press</a><span class="soon">Uploading Soon</span></li>
+                                        <li><a href="">MUN Guidelines</a><span class="soon">Uploading Soon</span></li>
                                     </ul>
                                 </li>
                                 <li style="position: relative" class="downloads menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-114"
