mobile responsive fixed Monday

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                     <ul class="dropDown" style="list-style: none; max-width: 300px">
                                         <li><a href="about.html">About IMSMUNC</a></li>
                                         <li><a href="./our%20team.html">Our Team</a></li>
-                                        <li><a href="advisory.html">Advisory Board</a></li>
+                                        <li><a href="advisory.html">Chief Advisor</a></li>
                                     </ul>
                                 </li>
                                 <li class="downloads menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-115"
@@ -287,14 +287,14 @@
                 <div class="header-contacts">
                     <p><span class="header-contacts__txt"><i style="margin-right: 10px; font-size: 24px;" class="fa fa-envelope" aria-hidden="true"></i><a class="num" href="mailto:director@imsuc.ac.in">imsucmun@gmail.com</a></span>
                     </p>
-                    <p><span class="telNum"><i style="margin-right: 10px; font-size: 24px;" class="fa fa-phone-square" aria-hidden="true"></i><a class="header-contacts__txt num" href="tel:977 369 5492">977 369 5492</a></span></p>
+                    <p><span class="telNum"><i style="margin-right: 10px; font-size: 24px;" class="fa fa-phone-square" aria-hidden="true"></i><a class="header-contacts__txt num" href="tel:8384862159">(+91)8384862159</a></span></p>
                 </div>
 
-<!--                <div class="contact-form-trigger">-->
-<!--                    <button class="link-primary btn-cf js-popup-cf-opener" type="button">-->
-<!--                        Contact Us-->
-<!--                    </button>-->
-<!--                </div>-->
+                <!--                <div class="contact-form-trigger">-->
+                <!--                    <button class="link-primary btn-cf js-popup-cf-opener" type="button">-->
+                <!--                        Contact Us-->
+                <!--                    </button>-->
+                <!--                </div>-->
             </div>
         </div>
     </div>
