pink replaced to grad

--- a/about.html
+++ b/about.html
@@ -308,7 +308,7 @@
 
 <li class="tg-list-item">
     <input class="tgl tgl-flip" id="cb5" type="checkbox"/>
-    <label class="tgl-btn" data-tg-off="Pink!" data-tg-on="Blue!" for="cb5"></label>
+    <label class="tgl-btn" data-tg-off="Grad..!" data-tg-on="Blue!" for="cb5"></label>
 </li>
 
 
