secretary new page

--- a/about.html
+++ b/about.html
@@ -310,7 +310,7 @@
 
 <li class="tg-list-item">
     <input class="tgl tgl-flip" id="cb5" type="checkbox"/>
-    <label class="tgl-btn" data-tg-on="Culture!" data-tg-off="Blue!" for="cb5"></label>
+    <label class="tgl-btn" data-tg-on="Our theme this year is Culture!" data-tg-off="Blend with the United Nations!" for="cb5"></label>
 </li>
 
 
