--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
                                     <p>Committees</p><i style="margin-left: 10px;" class="fa fa-angle-down"></i>
                                     <ul class="dropDown" style="list-style: none; max-width: 300px">
                                         <li><a href="index.html#our-work">Conferences</a></li>
+                                        <li><a href="./executive.html">Executive Board</a></li>
                                         <li><a href="./awards.html" target="_blank">Awards</a></li>
                                     </ul></li>
                                 <li style="position: relative" class="downloads menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-114"
@@ -380,6 +381,7 @@
                     </div>
 
                     <!--Icon for mobile-->
+                    <h1 class="mob_ttl">IMSMUNC 2019</h1>
                     <svg class="icon icon-hero visible-xs visible-sm">
                         <use xlink:href="#icon-hero"></use>
                     </svg>
@@ -659,7 +661,7 @@
     </ul>
     <li class="tg-list-item">
         <input class="tgl tgl-flip" id="cb5" type="checkbox"/>
-        <label class="tgl-btn" data-tg-on="Culture!" data-tg-off="Blue!" for="cb5"></label>
+        <label class="tgl-btn" data-tg-on="Our theme this year is Culture!" data-tg-off="Blend with the United Nations!" for="cb5"></label>
     </li>
 </div>
 
