executive board and responsive and images updated

--- a/about.html
+++ b/about.html
@@ -256,6 +256,7 @@
                                     <p>Committees</p><i style="margin-left: 10px;" class="fa fa-angle-down"></i>
                                     <ul class="dropDown" style="list-style: none; max-width: 300px">
                                         <li><a href="index.html#our-work">Conferences</a></li>
+                                        <li><a href="./executive.html">Executive Board</a></li>
                                         <li><a href="./awards.html" target="_blank">Awards</a></li>
                                     </ul></li>
                                 <li style="position: relative" class="downloads menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-114"
@@ -289,7 +290,7 @@
                 <div class="header-contacts">
                     <p><span class="header-contacts__txt"><i style="margin-right: 10px; font-size: 24px;" class="fa fa-envelope" aria-hidden="true"></i><a class="num" href="mailto:director@imsuc.ac.in">imsucmun@gmail.com</a></span>
                     </p>
-                    <p><span class="telNum"><i style="margin-right: 10px; font-size: 24px;" class="fa fa-phone-square" aria-hidden="true"></i><a class="header-contacts__txt num" href="tel:8384862159">(+91)8384862159</a></span></p>
+                    <p><span class="telNum"><i style="margin-right: 10px; font-size: 24px;" class="fa fa-phone-square" aria-hidden="true"></i><a class="header-contacts__txt num" href="tel:8384862159">(+91) 8384862159</a></span></p>
                 </div>
 
                 <!--                <div class="contact-form-trigger">-->
@@ -302,9 +303,22 @@
     </div>
 </header>
 
-<div class="wrapper">
+<div class="wrapper about">
     <h2>About IMSMUNC</h2>
     <p>The inception of IMS Model United Nations Conference happened 4 years ago in 2016 with the vision of empowering student with an advanced simulated competitive platform that tests their political soundness, knowledge of global and national issues and ability to resolve them diplomatically. In 2016 there were 150 delegates who engaged in three conference committees. The committees discussed various agenda like the prohibition and manufacturing of new types of weapons. Debate on the provision for the state of Jammu and Kashmir in review of Article 370 was done by the delegates of AIPPM. A special emphasis was laid on human rights violation in armed conflict. In the second edition of IMSMUNC we set a new benchmark with five committees. We received delegation of over 250 students from different schools and colleges. The special part of the event was the fifth committee: Ministry of Magic which attracted the entire potter heads to take part in the conference. The agendas of the committees ranged from GST to Human rights in the Middle East. The third edition of IMSMUNC which took place in 2018 presented the avenue for empowering women and inspiring change and achieves equality. The conference revolved around women and how their rights can be protected and how they can achieve equality in the society we live in. The agenda of committees ranged from Triple Talaq, marital rape to protecting the rights of women.  The fourth edition of IMS MUN conference focuses on different cultural disputes that are happening. This convention will focus mainly on the cultural rights. The edition will help the delegates to open their mind to international and national cultural issues.  We have seven committees this year which will act as a catalyst to bring about a change in the minds of the people and the society. We believe that we can further our vision of a world through solidarity, trust and peace. The focus will be on providing them with the ability to pause and think of concrete solutions and ways, which in the future would help heal the world. A new era of revolution isn't far if we push the students beyond what they feel they can do and make them believe that they have the ability to achieve what they envision.  This year it is expected that delegates in excess of 350 will be coming to represent portfolios in the seven committees. We believe that this edition of IMSMUNC will give young minds an exposure to gain national and international perspective. We aim to provide an intellectually stimulating environment to the delegates to engage in fruitful decisions and learn through experience of debating, diplomacy and negotiations.</p>
+    <h3>Glimpses of Past years</h3>
+    <div class="gallery-container">
+        <div class="image-item"><img src="./images/Glimpses/resized/1.jpg" alt=""></div>
+        <div class="image-item"><img src="./images/Glimpses/resized/2.jpg" alt=""></div>
+        <div class="image-item"><img src="./images/Glimpses/resized/3.jpg" alt=""></div>
+        <div class="image-item"><img src="./images/Glimpses/resized/4.jpg" alt=""></div>
+        <div class="image-item"><img src="./images/Glimpses/resized/5.jpg" alt=""></div>
+        <div class="image-item"><img src="./images/Glimpses/resized/6.jpg" alt=""></div>
+        <div class="image-item"><img src="./images/Glimpses/resized/7.jpg" alt=""></div>
+        <div class="image-item"><img src="./images/Glimpses/resized/8.jpg" alt=""></div>
+        <div class="image-item"><img src="./images/Glimpses/resized/9.jpg" alt=""></div>
+        <div class="image-item"><img src="./images/Glimpses/resized/10.jpg" alt=""></div>
+    </div>
 </div>
 
 
