--- a/our team.html
+++ b/our team.html
@@ -227,7 +227,7 @@
         </div>
 
         <div class="header__nav-wrap pink">
-            <h2 class="mainone">IMS Model United Nations Conference 2019<span class="your-clock countdown"></span></h2>
+            <div class="wrapIt"><h2 class="mainone">IMS Model United Nations Conference 2019</h2><span class="your-clock countdown"></span></div>
             <button aria-label="Open navigation" class="new btn-transparency header__btn js-mobile-menu-opener">
                 <span class="header__btn-line"></span>
             </button>
