--- a/awards.html
+++ b/awards.html
@@ -214,6 +214,7 @@
 </svg>
 
 <header class="header pink">
+    <span class="top-head your-clock1 countdown"></span>
     <div class="header__container container--md">
         <div class="header__left">
             <a aria-label="Go to home page" class="header__logo" href="index.html">
@@ -225,7 +226,7 @@
         </div>
 
         <div class="header__nav-wrap pink">
-            <h2 class="mainone">IMS Model United Nations Conference 2019<span class="your-clock countdown"></span></h2>
+            <div class="wrapIt"><h2 class="mainone">IMS Model United Nations Conference 2019</h2><span class="inner-head your-clock countdown"></span></div>
             <button aria-label="Open navigation" class="new btn-transparency header__btn js-mobile-menu-opener">
                 <span class="header__btn-line"></span>
             </button>
