--- a/awards.html
+++ b/awards.html
@@ -324,13 +324,13 @@
 
 
 
-<!--<div class="social-links">-->
-<!--    <p class="site-info">Copyright  &copy; 2019 | IMS Ghaziabad University Courses Campus | All Rights Reserved.<br> Designed by <a href="http://www.imsuc.ac.in">EWL Team</a></p>-->
-<!--    <ul class="social-block" style="list-style: none">-->
-<!--        <li><a href=""><i class="fa fa-instagram"></i></a></li>-->
-<!--        <li><a href="https://www.facebook.com/Imsmunc/"><i class="fa fa-facebook-f"></i></a></li>-->
-<!--    </ul>-->
-<!--</div>-->
+<div class="social-links">
+    <p class="site-info">Copyright  &copy; 2019 | IMS Ghaziabad University Courses Campus | All Rights Reserved.<br> Designed by <a href="http://www.imsuc.ac.in">EWL Team</a></p>
+    <ul class="social-block" style="list-style: none">
+        <li><a href=""><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/Imsmunc/"><i class="fa fa-facebook-f"></i></a></li>
+    </ul>
+</div>
 
 
 <script type='text/javascript'>
