--- a/index.html
+++ b/index.html
@@ -445,8 +445,7 @@
                     </div>
                     <div class="service-item">
                         <ul style="list-style: disc; font-size: 24px;">
-                            <li><span style="">It will help in carrying out in-depth research about historical, geo-political and economic issues that are faced by different <nations
-                                    class=""></nations></span></li>
+                            <li><span style="">It will help in carrying out in-depth research about historical, geo-political and economic issues that are faced by different nations around the globe.</span></li>
                         </ul>
                     </div>
                     <div class="service-item">
